Labels and flag overflow bug fixed

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dropdown.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dropdown.scss
@@ -143,3 +143,9 @@
     position: relative;
   }
 }
+
+.dropdown--communicator-labels {
+  .dropdown__container {
+    overflow-y: auto;
+  }
+}
