--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/form-elements.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/form-elements.scss
@@ -60,6 +60,15 @@
   }
 }
 
+.form-element--new-flag,
+.form-element--new-label {
+  width: 100%;
+
+  .form-element__input {
+    width: 100%;
+  }
+}
+
 .form-element--checkbox-radiobutton {
   align-items: center;
   background-color: transparent;
@@ -237,6 +246,10 @@
   }
 
   // scss-lint:enable SelectorFormat
+}
+
+.form-element__input--new-label {
+  width: 100%;
 }
 
 // Teacher's Worklist Specific fields
